# serializer version: 1
# name: test_buttons[5xu9h3][button.goat_g1_reset_blade_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.goat_g1_reset_blade_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset blade lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_blade',
    'unique_id': '8516fbb1-17f1-4194-0000000_reset_lifespan_blade',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[5xu9h3][button.goat_g1_reset_blade_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Reset blade lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.goat_g1_reset_blade_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[5xu9h3][button.goat_g1_reset_lens_brush_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.goat_g1_reset_lens_brush_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset lens brush lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_lens_brush',
    'unique_id': '8516fbb1-17f1-4194-0000000_reset_lifespan_lens_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[5xu9h3][button.goat_g1_reset_lens_brush_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Goat G1 Reset lens brush lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.goat_g1_reset_lens_brush_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_empty_dustbin:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.dusty_empty_dustbin',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Empty dustbin',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'station_action_empty_dustbin',
    'unique_id': '8516fbb1-17f1-4194-0000001_station_action_empty_dustbin',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_empty_dustbin:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dusty Empty dustbin',
    }),
    'context': <ANY>,
    'entity_id': 'button.dusty_empty_dustbin',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_relocate:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.dusty_relocate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relocate',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'relocate',
    'unique_id': '8516fbb1-17f1-4194-0000001_relocate',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_relocate:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dusty Relocate',
    }),
    'context': <ANY>,
    'entity_id': 'button.dusty_relocate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_filter_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.dusty_reset_filter_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_filter',
    'unique_id': '8516fbb1-17f1-4194-0000001_reset_lifespan_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_filter_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dusty Reset filter lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.dusty_reset_filter_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_main_brush_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.dusty_reset_main_brush_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset main brush lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_brush',
    'unique_id': '8516fbb1-17f1-4194-0000001_reset_lifespan_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_main_brush_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dusty Reset main brush lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.dusty_reset_main_brush_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_round_mop_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.dusty_reset_round_mop_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset round mop lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_round_mop',
    'unique_id': '8516fbb1-17f1-4194-0000001_reset_lifespan_round_mop',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_round_mop_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dusty Reset round mop lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.dusty_reset_round_mop_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_side_brush_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.dusty_reset_side_brush_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset side brush lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_side_brush',
    'unique_id': '8516fbb1-17f1-4194-0000001_reset_lifespan_side_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_side_brush_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dusty Reset side brush lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.dusty_reset_side_brush_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_unit_care_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.dusty_reset_unit_care_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset unit care lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_unit_care',
    'unique_id': '8516fbb1-17f1-4194-0000001_reset_lifespan_unit_care',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[qhe2o2][button.dusty_reset_unit_care_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dusty Reset unit care lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.dusty_reset_unit_care_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_relocate:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_relocate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relocate',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'relocate',
    'unique_id': 'E1234567890000000001_relocate',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_relocate:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Relocate',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_relocate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_filter_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_reset_filter_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_filter',
    'unique_id': 'E1234567890000000001_reset_lifespan_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_filter_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Reset filter lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_reset_filter_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_main_brush_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_reset_main_brush_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset main brush lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_brush',
    'unique_id': 'E1234567890000000001_reset_lifespan_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_main_brush_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Reset main brush lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_reset_main_brush_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_side_brush_lifespan:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ozmo_950_reset_side_brush_lifespan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset side brush lifespan',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_lifespan_side_brush',
    'unique_id': 'E1234567890000000001_reset_lifespan_side_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[yna5x1][button.ozmo_950_reset_side_brush_lifespan:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Reset side brush lifespan',
    }),
    'context': <ANY>,
    'entity_id': 'button.ozmo_950_reset_side_brush_lifespan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
